# FluxDown

./: .gitignore  AGENTS.md  Cargo.toml  pubspec.yaml
.github/workflows/: deploy-website.yml  release.yml  triage.yml
.omp/rules/: no-meta-in-comments.md
.omp/skills/release/: SKILL.md
assets/i18n/: en.json  zh.json
bucket/: fluxdown.json
fluxDown/: package.json
fluxDown/entrypoints/: background.ts  fetch-interceptor.ts  resource-detector.content.ts
fluxDown/entrypoints/popup/: main.ts  style.css
fluxDown/utils/: media-sniff.test.ts  media-sniff.ts  native-messaging.ts  resource-store.ts  resource-types.ts
lib/: main.dart
lib/src/i18n/: translations.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
native/api/: Cargo.toml
native/cli/: Cargo.toml
native/fluxdown_updater/: Cargo.toml  build.rs
native/hub/: Cargo.toml  test_panic.rs
native/nmh/: Cargo.toml  build.rs
packaging/qnap/: build_qpkg.sh
packaging/synology/: build_spk.sh
scripts/: gen_icons.ts  mem_debug_analyze.ps1  mem_debug_launch.ps1  mem_debug_stop.ps1  release_tag.py
test/: ico_codec_test.dart  number_selector_test.dart
web/src/: design.css  main.tsx
website/: .dockerignore  .env.example  .gitignore  Dockerfile  astro.config.mjs  deploy.sh  docker-compose.yml  package-lock.json  package.json
website/public/: openapi.json
website/scripts/: migrate-feature-votes.mjs
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+155 files in other folders)
