# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `target` output folder and
# various Rust configurations.

[workspace]
resolver = "3"
members = ["native/*"]

[profile.release]
# 移除全部符号（含符号表），最大化减小体积
strip = true
# 为体积优化代码生成（默认 opt-level=3 偏向速度，"z" 最激进压缩体积）
opt-level = "z"
# Full LTO：跨 crate 死代码消除/内联最彻底，二进制最小（编译更慢）
lto = "fat"
# 单一 codegen 单元，配合 LTO 进一步减小体积（牺牲并行编译速度）
codegen-units = 1
# 注意：不设 panic = "abort" —— engine 的 download_manager 依赖 catch_unwind
# 恢复 task panic（见 AGENTS.md），abort 会让 panic 直接终止进程。
